--- a/VRChat/55/1006555.html
+++ b/VRChat/55/1006555.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8IbKlLlAeHjR/tdmYjIixDpIM67+pcWfyvzkzFy1rRY="></script>
+    "g2/c5Ut/ij13TF+zdEsKdz0B2brMnh/iM/B9iILvyg4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け]Dボーン式両手槍","description":"[VRChat向け]Dボーン式両手槍\n\n制作　oga\ntwitter @oga_pleconia\n\nダイナミックボーンを使用した両手持ち槍（というかハルバード）のモデルです\n※有償アセット「ダイナミックボーン」を予めご用意ください\n※同梱の解説画像類はアバターアップロードをしたことがある人向けです\n※デスクトップモードでは使えないと思います\n\n※※VRChatの挙動として、特定条件（ワールド内の処理負荷？揺れモノの数？）でダイナミックボーンの処理が一部省略される現象があるようです。この状態になると両手持ちが上手く動作せず、現象が起きているプレイヤーがゲームを再起動するまで直りません。この状態は同期されないため、槍がしっかり両手持ちに見えているプレイヤーと、そうでないプレイヤーが混在してしまうことになります。\n\n・データ内容\nfbx2018形式（unity5.6へのインポート確認済）\nmaya ascii形式（2018.2）\nテクスチャPSD、PNG\n使用方法解説メモ\n\n\n・仕様\nポリゴン数　2016\nジョイント　6本\n\n\n・許可事項\n本データおよび本データの改変物を動画や画像、ゲームに使用することを許可、それらの商用も許可\nVR、UNITY関係以外でもOK。クレジットは不要です\n\n\n・制限事項\n本データおよび本データの改変物自体を配布・販売することは禁止\n（vrchatのアバターペデスタルのようなローカルにダウンロード出来ない形であれば許可）\n（ゲームに含めることはOK。データ自体を取り出せる配布がダメ）","url":"https://booth.pm/ja/items/1006555","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/1006555/6b3bfa5a-844f-4ee2-b466-9ee0385f0c62_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8IbKlLlAeHjR/tdmYjIixDpIM67+pcWfyvzkzFy1rRY="></script>
+    nonce="g2/c5Ut/ij13TF+zdEsKdz0B2brMnh/iM/B9iILvyg4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -349,9 +349,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
