--- a/VRChat/05/1006305.html
+++ b/VRChat/05/1006305.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rzZo6vil/AWbQMl0fZC00T9KGWTDg5aVVUvfgcbiKbc="></script>
+    "bNkRRgNuzc/w3HvlCW23wjaa63XVpTnMx9xwKQIc3xM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】VRC向けコンシャツ風パーカー","description":"・VRCなどで使えるパーカーのモデルです。\n・ソフト、使用目的に制限は設けません。\n・改変も自由です。\n・再配布は禁止です。\n・.Blend形式及び.fbx形式が入っております。圧縮は.zip形式です。\n・簡単なウエイト入りです、合わなければ調整してください。\n\n9/14\n　説明書を改訂しました。\n","url":"https://booth.pm/ja/items/1006305","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ffd38964-fc99-43c6-b020-a76e2e47c238/i/1006305/9a69f84d-db88-4bcd-9bee-c510e096c651_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rzZo6vil/AWbQMl0fZC00T9KGWTDg5aVVUvfgcbiKbc="></script>
+    nonce="bNkRRgNuzc/w3HvlCW23wjaa63XVpTnMx9xwKQIc3xM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -458,9 +458,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
