--- a/VRChat/24/1006224.html
+++ b/VRChat/24/1006224.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "imoNthz9h65ULkPG1hg/ZIF04qz0nGCtiKZDnQHl7DI="></script>
+    "WFFo6ytYLMlMC9+Fuo1w+MTZK/96lh7jO2OzqwjyLA0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[眼鏡]アンダーリム眼鏡_猫(SHG-18-0901_nyander、SHG-21-0104L_nyander)","description":"アンダーリム眼鏡(猫)です。\n肉球の形の穴が開いています。\n(そのせいでポリゴン数が・・・)\n\n →　ポリゴン削減版用意しました。\n　　テクスチャ消せば穴無しでも利用できます。\n\n2018/09/15 v2\nモデル修正(鼻あて)\n2018/12/02 v3\nモデル修正(ポリゴン削減2種)\n2021/01/31\n軽量版\"SHG-21-0104L_nyander.zip\"追加(ポリゴン削減、レンズ削除、1マテリアル化)\n\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage + fbx + png\n　ポリゴン数：V1,2 2889(本体2808 ＋ 猫アクセ81)\n              V3-1 2073(本体1972 ＋ 猫アクセ101)\n              V3-2 969(本体868 ＋ 猫アクセ101)\n　　　　　　　軽量版 794\n　その他：ボーンあり(つる左右、猫アクセ)\n　　　　　つるの長さ調節可能\n　　　　　猫アクセをDynamicBoneで揺らすことが可能(軽量版以外)\n　テクスチャ：通常版：白一色。マテリアル設定で色変更。UTS2。\n　　　　　　　軽量版：肉球有無で2パターン。ToonLit\n\n使い方\n　事前に以下をインポート\n　通常版\n　・UTS2.0\n　・DynamicBone(任意)\n　prefabフォルダ内のnyander.prefabをHierarchyにドロップ\n　色の変更はマテリアルのベースカラーおよび影カラーを変更してください。\n\n　軽量版\n　・軽量版はToonLit(VRCSDKに同梱されています)\n　・フォルダに配置されているUnitypackageをインポート\n　・prefabフォルダ内のprefabファイルをHierarchy等にドロップ\n\n　調整\n　・Armature\u003eroot\u003eBone_LおよびBone_Rでツルの調整が行えます\n　・軽量版のみ)under_nikukyuのSkinned Mesh RendererのBlendShapesより猫のアクセサリーの非表示化ができます。\n\n**DL時の注意**\nnyander_v2.zipが旧版\nnyander_v3.zipが通常版\nSHG-21-0104L_nyander.zipが軽量版(レンズ無し)\nです。\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n\n","url":"https://booth.pm/ja/items/1006224","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/1006224/5cec4700-944c-4aa7-870d-653839fb98c3_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="imoNthz9h65ULkPG1hg/ZIF04qz0nGCtiKZDnQHl7DI="></script>
+    nonce="WFFo6ytYLMlMC9+Fuo1w+MTZK/96lh7jO2OzqwjyLA0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -450,9 +450,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
