--- a/VRChat/15/1005715.html
+++ b/VRChat/15/1005715.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Jp2AOrBkImABBsxgoJ+FF3sg78bnFuUggRRZNwfTj2o="></script>
+    "LPRr6x1HUCk9+t097Y32CVOXbU1fM4meojJjBMvtV10="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル【ぬいぐるみ素体】VRC向け","description":"（SDKの更新にともなって対応が追い付いてないため、最新のverには対応しておりません。ご了承ください。）\n\n【ぬいぐるみ素体】\n\nVRC向けのぬいぐるみ型素体です。\n\n簡単に制作できるよう解説書、毛糸のテクスチャも同梱しています。\n\n改変せずに使用できる【普通の子】。\n改変して使う【ズボン】【スカート】の3モデルが入っています。\n","url":"https://booth.pm/ja/items/1005715","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/aef7c24c-ffc4-4f07-b3d3-ce0a9a691db3/i/1005715/d1115c30-3b20-4f29-9f09-40412eff4779_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Jp2AOrBkImABBsxgoJ+FF3sg78bnFuUggRRZNwfTj2o="></script>
+    nonce="LPRr6x1HUCk9+t097Y32CVOXbU1fM4meojJjBMvtV10="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -555,9 +555,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
