--- a/VRChat/63/1005463.html
+++ b/VRChat/63/1005463.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "siYasmKtUZfQU5a7RuU4rX8uRtg0mpbqurDXKV9iSoc="></script>
+    "L4ovYwBjDJX9J3nLWoPeKKsp+pDbm/jtbLcHMelkbrE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【アストロ・ピューパ】","description":"宇宙服とうさぎをモチーフにしたアバター向け3Dモデルです。\nVRChatでのご使用を想定して制作していますがその他のコンテンツでもご利用いただけます。\n\n表情はデフォルト含め5種類と顔無し、まばたきとリップシンク用のモーフを用意しております。\nバックパックやアクセサリーは着脱可能です。\n\n※unitypackage内のprefab化してあるモデルは、頭の中にもう一つ球のオブジェクトが入ってるため少し三角面数が増えています。\n\n追記\n18/09/13\n・価格が適正ではないと判断し値下げいたしました。\n\n19/3/07　v1.1\n・アイトラッキングが動いていなかった問題を修正。\n\n19/3/10 v1.2\n・.unitypackage内のプレファブが更新されていなかった問題を修正。","url":"https://booth.pm/ja/items/1005463","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/fd5759e4-ba4e-4d8b-95f2-d86f545aef0c/i/1005463/92087b58-2dba-46e0-8763-39ff23e8d18e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="siYasmKtUZfQU5a7RuU4rX8uRtg0mpbqurDXKV9iSoc="></script>
+    nonce="L4ovYwBjDJX9J3nLWoPeKKsp+pDbm/jtbLcHMelkbrE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -490,9 +490,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
