--- a/VRChat/24/1000824.html
+++ b/VRChat/24/1000824.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "el8+lCMfs5CDX329EdKDYxL6nQalWaTcsxy/qvkDTlQ="></script>
+    "vliBjaYolVGgHXDaY5PgrbAzKIV48hbTfRElTXBmwvQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けボクセルモデル「天乃」","description":"VRChat向けhumanoid対応ボクセルモデルです。\nVRChat以外で使用することは可能です。\nUnityパッケージを同封しているのですぐにお使いいただけます。\n\n＜モデル情報＞\nモデルネーム「天乃」\nポリゴン数3726\nマテリアル数２\n表情5種＋お団子の取り出し有。\n\n＜配布データ一覧＞\nunityパッケージ\nvoxファイル\nobjファイル\nfbxファイル\nテクスチャファイル\nreadme\n\n＜利用規約＞\n\n---------------------------------------------------------\n※利用規約を読むのが面倒な方向けのおおまかなもの※\n・商業利用OKですよー\n\n・放送も出られます。\n\n・改変はどんどんしちゃて下さい\n\n・再配布はやめてね\n\n・R-18はこっそりと\n\n・あとは好きに使ってくれていいですよー\n\n--------------------------------------------------------\n・本規約は当ボクセルモデル「天乃」を購入し、使用した時点で同意したものとします。\n当モデルを使用したことによる損失、トラブルに対して私「カイム」は責任を負いかねますので\nご了承ください。\n・当モデルの配布データおよびその改変データの権利はモデル製作者である\nカイムに帰属するものとします。\n\n（商業利用について）\n・当モデルは改変、未改変問わず営利活動にて使用することが可能です。\n　それに伴って金銭が発生する動画配信ではクレジットの必要なしに写りこむことができます\n・また当モデルはVRChatでの使用をを想定して制作されていますが、VRChat以外での使用（virtual castなど）は可能です。\n\n（性的な目的での利用について）\n・個人的範囲での利用ならば特に問題はありません。公の場ではモラルと秩序を持って\n利用してください。\n\n（改変について）\n・当モデルは改変推奨です。配布データのvoxファイルから原型を留めない改変をすることも可能です。\nまた再配布をしなければ改変をして別のキャラクターとして扱うことを許可します。\n\n（禁則事項）\n・当モデルを改変、未改変問わず再配布、販売することを禁止いたします。\nまたVRChatのアバターペデスタルによる配布は私が許可した以外のものは禁止いたします。\nワールドにモデルを置くこと自体は可能です。\n・特定の個人、団体、宗教等に関する改変、または当モデルを利用したそれらへの誹謗中傷を禁止します。\n\n（その他）\nいろいろ書きましたが結局再配布と悪意のある使い方以外ならばご自由に利用できます。\n","url":"https://booth.pm/ja/items/1000824","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ef2009a1-23cb-48b4-a676-c380a8e1368a/i/1000824/a623dea7-ba59-4d66-8ec6-bf00707c806c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="el8+lCMfs5CDX329EdKDYxL6nQalWaTcsxy/qvkDTlQ="></script>
+    nonce="vliBjaYolVGgHXDaY5PgrbAzKIV48hbTfRElTXBmwvQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -432,9 +432,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
