--- a/VRChat/19/1005619.html
+++ b/VRChat/19/1005619.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "TekqyR5leoiBwgCsPeUb4Rsjy0Jdv3XKSaNh6speiz8="></script>
+    "qiVo+mH8bjkrp3Sn6XIitISJ08aPYMROC/uXfXYWlYo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Short Sword（小型片手剣）【無料版あり】","description":"累計売上５桁を記念して制作したオーソドックスな小型の片手剣です。\nSketchfabで3Dモデルの閲覧ができます。\n\n今回は記念品ということで無料版もご用意しております。是非一度、お試しください\n無料版でも制限はありません。有料版同様の規約に則ってご利用いただけます。\n\n※通常版と投げ銭版の内容は(規約含めて)完全に同一です　間違えましても、返金には応じられませんので、ご注意ください。\n\nNew!：VCI版も公開しました　主にvキャスで使用可能です\nhttps://seedonline.jp/products/6b45e4b07301f0a738ccfcd5d1d0eb7855539a50f8bf7cb23d79ac75485c0e87 ","url":"https://booth.pm/ja/items/1005619","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1005619/ec1f118a-9c8c-4013-bb71-7613f9029fc3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TekqyR5leoiBwgCsPeUb4Rsjy0Jdv3XKSaNh6speiz8="></script>
+    nonce="qiVo+mH8bjkrp3Sn6XIitISJ08aPYMROC/uXfXYWlYo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -516,9 +516,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
