--- a/VRChat/16/1005516.html
+++ b/VRChat/16/1005516.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "K3Ju2sHZarhpS6Yj+NLhRVxWos20IRfF3jOud3NzKis="></script>
+    "DrTDuF/UpsRs3PIsYrqtoB0KU6KwaIQad9JpYalK9Pg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】VRC想定_超シンプル扇子(156ポリゴン)","description":"二作品目の小物『扇子』です。\n\n使いやすいようにアニメーション追加と\nFixed Jointを使った装備方法を説明に追加しました\n\nとりあえず開閉はできるのと\n最低限塗りやすそうなUVにはなってます。\n\n一応本物風の開閉機構にはなっているので\n影とかをちゃんとつければいい感じに見える…ハズ。\n\n有料再配布以外はお好きにお使いください。\n\n2018-10-07\n・sceneを削除してprefab追加","url":"https://booth.pm/ja/items/1005516","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2e38c3c4-71ff-4201-8d0d-11df6e2b715b/i/1005516/81b177e1-36c0-47aa-a088-605adfb09bb8_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="K3Ju2sHZarhpS6Yj+NLhRVxWos20IRfF3jOud3NzKis="></script>
+    nonce="DrTDuF/UpsRs3PIsYrqtoB0KU6KwaIQad9JpYalK9Pg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -431,9 +431,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
