--- a/VRChat/67/1004767.html
+++ b/VRChat/67/1004767.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "h49jNR0Xuh7bA468KKu7njQj24EL80FK7TUWdGHY9Pc="></script>
+    "QoljQt0evlKOyUscpnDDGgaKuLakOUS+E/1W6Ik0aSc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用3Dアクセサリー「ノブリスレギンス」","description":"試用版(テクスチャ無し版)は\nhttps://miufreru.booth.pm/items/1004760\nにあります\n内容\n・UnityPackage\n・FBXファイル\n・テクスチャ三枚（本体テクスチャ一枚・MetallicSmoothnessMap一枚・NormalMap一枚）\n\n利用規約\n　・著作権は作者である美羽_C.フレール（@MFreru）が保有しています。\n\n　・以下のような使用を禁止致します。\n　　×公序良俗に反する利用\n　　×政治的・宗教的主張に関する利用\n　　×再配布・再販売\n　　×自作発言等\n\n　・テクスチャ改変、モデル改変・営利利用可能です。\n\n　・本モデルデータ、および改変したモデルを使用したことにより発生したトラブルや損失に関して、作者とその関係者、およびその所属するいかなる団体も、一切の責任を負わないものとします。\n\n本体説明\n・Unityで付けたいモデルのUpper_leg・Lower_leg・Footのボーン内にパーツを入れてください\n・UnityPackageをUnityのprojectに入れて使用してください\n　prefab化してあります\n・ポリゴン数△2668(片足△1190スカート△288)\n\n\n・シェーダはStandardシェーダーの使用を想定しています","url":"https://booth.pm/ja/items/1004767","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bba5e0f7-99ce-4f4d-8fb1-16f4d8e54eea/i/1004767/b42d8d67-902d-4ffa-9d37-e80796a31b4b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="h49jNR0Xuh7bA468KKu7njQj24EL80FK7TUWdGHY9Pc="></script>
+    nonce="QoljQt0evlKOyUscpnDDGgaKuLakOUS+E/1W6Ik0aSc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -430,9 +430,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
